--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -2,128 +2,9 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>乐淘-后台管理系统</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.css"/>
-    <link rel="stylesheet" href="assets/nprogress/nprogress.css"/>
-    <link rel="stylesheet" href="css/main.css"/>
+    <title></title>
 </head>
 <body>
-<!--侧边栏-->
-<aside>
-    <div class="lt_info">
-        <a href="index.html"><b>ITCAST</b></a>
-    </div>
-    <div class="lt_user">
-        <img src="images/default.png" class="img-circle" alt="User Image">
-        <span>传智播客</span>
-    </div>
-    <ul class="lt_menu">
-        <li><a href="userList.html"><span class="glyphicon glyphicon-user"></span> 用户管理</a></li>
-        <li>
-            <a href="javascript:;">
-                <span class="glyphicon glyphicon-list"></span>
-                分类管理
-                <span data-icon class="glyphicon glyphicon-menu-left"></span>
-            </a>
-            <div class="child">
-                <a href="categoryFirst.html">一级分类</a>
-                <a href="categorySecond.html">二级分类</a>
-            </div>
-        </li>
-        <li><a href="product.html"><span class="glyphicon glyphicon-tags"></span> 商品管理</a></li>
-    </ul>
-</aside>
-<!--右侧内容-->
-<section>
-    <!--头部-->
-    <nav class="navbar navbar-static-top">
-        <div class="container-fluid">
-            <a data-menu href="javascript:;" title="切换" class="pull-left"><span class="glyphicon glyphicon-align-justify"></span></a>
-            <a data-logout data-toggle="modal" href="#logoutModal" title="退出" class="pull-right"><span class="glyphicon glyphicon-log-out"></span></a>
-        </div>
-    </nav>
-    <!--内容-->
-    <article>
-        <div class="container-fluid">
-            <!--路径导航-->
-            <ol class="breadcrumb">
-                <li><a href="index.html">后台管理</a></li>
-                <li class="active">管理主页</li>
-            </ol>
-            <div class="lt_chart" style="display: flex">
-                <div id="main01" style="width: 50%;height: 400px"></div>
-                <div id="main02" style="width: 50%;height: 400px"></div>
-            </div>
-        </div>
-    </article>
-</section>
-<script src="assets/jquery/jquery.min.js"></script>
-<script src="assets/bootstrap/js/bootstrap.min.js"></script>
-<script src="assets/nprogress/nprogress.js"></script>
-<script src="assets/echarts/echarts.min.js"></script>
-<script src="js/main.js"></script>
-<script>
 
-    var myChart1 = echarts.init(document.getElementById('main01'));
-    var option = {
-        title: {
-            text: '2017年注册人数'
-        },
-        tooltip: {},
-        xAxis: {
-            data: ["1月","2月","3月","4月","5月","6月"]
-        },
-        yAxis: {},
-        series: [{
-            name: '销量',
-            type: 'bar',
-            data: [532, 2032, 3622, 1222, 1052, 2220]
-        }]
-    };
-    myChart1.setOption(option);
-
-
-    var myChart2 = echarts.init(document.getElementById('main02'));
-    option2 = {
-        title : {
-            text: '热门品牌销售情况',
-            subtext: '2017年06月',
-            x:'center'
-        },
-        tooltip : {
-            trigger: 'item',
-            formatter: "{b} : {c} ({d}%)"
-        },
-        legend: {
-            orient: 'vertical',
-            left: 'left',
-            data: ['耐克','阿迪达斯','新百伦','李宁','其他']
-        },
-        series : [
-            {
-                name: '访问来源',
-                type: 'pie',
-                radius : '55%',
-                center: ['50%', '60%'],
-                data:[
-                    {value:335, name:'耐克'},
-                    {value:310, name:'阿迪达斯'},
-                    {value:234, name:'新百伦'},
-                    {value:185, name:'李宁'},
-                    {value:152, name:'其他'}
-                ],
-                itemStyle: {
-                    emphasis: {
-                        shadowBlur: 10,
-                        shadowOffsetX: 0,
-                        shadowColor: 'rgba(0, 0, 0, 0.5)'
-                    }
-                }
-            }
-        ]
-    };
-    myChart2.setOption(option2);
-
-</script>
 </body>
 </html>
