--- a/public/admin/categoryFirst.html
+++ b/public/admin/categoryFirst.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>后台管理系统-首页</title>
+    <title>后台管理系统-一级分类</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="assets/bootstrap-validator/css/bootstrapValidator.min.css"/>
     <link rel="stylesheet" href="assets/nprogress/nprogress.css"/>
@@ -21,15 +21,15 @@
     <!--菜单-->
     <div class="menu">
         <ul>
-            <li class="now"><a href="userManage.html"><span class="glyphicon glyphicon-user"></span> 用户管理</a></li>
-            <li>
+            <li><a href="userManage.html"><span class="glyphicon glyphicon-user"></span> 用户管理</a></li>
+            <li class="now">
                 <a href="javascript:;"><span class="glyphicon glyphicon-list"></span> 分类管理</a>
-                <div class="child" style="display: none">
-                    <a href="categoryFirst.html">一级分类</a>
+                <div class="child">
+                    <a class="now" href="categoryFirst.html">一级分类</a>
                     <a href="categorySecond.html">二级分类</a>
                 </div>
             </li>
-            <li><a href="productManage"><span class="glyphicon glyphicon-tags"></span> 商品管理</a></li>
+            <li><a href="productManage.html"><span class="glyphicon glyphicon-tags"></span> 商品管理</a></li>
         </ul>
     </div>
 </aside>
@@ -43,18 +43,64 @@
     <div class="container-fluid">
         <!--路径导航-->
         <ol class="breadcrumb">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Library</a></li>
-            <li class="active">Data</li>
+            <li><a href="#">管理系统</a></li>
+            <li class="active">分类管理</li>
+            <li class="active">一级分类</li>
         </ol>
-        <!--TODO 内容-->
+        <div class="ad_content">
+            <button id="addBtn" class="btn btn-default mb_15">添加分类</button>
+            <table class="table table-bordered table-hover">
+                <thead>
+                <tr>
+                    <th width="20%">序号</th>
+                    <th width="80%">分类名称</th>
+                </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+            <div class="page">
+                <ul class="pagination"></ul>
+            </div>
+        </div>
     </div>
 </section>
+<div class="modal fade" id="addModal">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+                <h4 class="modal-title">添加分类</h4>
+            </div>
+            <div class="modal-body">
+                <form action="#" id="form">
+                    <div class="form-group">
+                        <input name="categoryName" type="text" class="form-control" placeholder="请输入一级分类名称">
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="submit" class="btn btn-primary" form="form">确定</button>
+            </div>
+        </div>
+    </div>
+</div>
+<script type="text/template" id="template">
+    <% for(var i = 0 ; i < rows.length ; i ++){ %>
+    <tr>
+        <td><%=(page-1)*size+i+1%></td>
+        <td><%=rows[i].categoryName%></td>
+    </tr>
+    <% } %>
+</script>
 <script src="assets/jquery/jquery.min.js"></script>
 <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 <script src="assets/bootstrap-validator/js/bootstrapValidator.min.js"></script>
 <script src="assets/nprogress/nprogress.js"></script>
+<script src="assets/artTemplate/template-native.js"></script>
+<script src="assets/bootstrap-paginator/bootstrap-paginator.min.js"></script>
 <script src="js/admin.js"></script>
-<script src="js/index.js"></script>
+<script src="js/categoryFirst.js"></script>
 </body>
 </html>
