--- a/public/admin/userManage.html
+++ b/public/admin/userManage.html
@@ -29,7 +29,7 @@
                     <a href="categorySecond.html">二级分类</a>
                 </div>
             </li>
-            <li><a href="productManage"><span class="glyphicon glyphicon-tags"></span> 商品管理</a></li>
+            <li><a href="productManage.html"><span class="glyphicon glyphicon-tags"></span> 商品管理</a></li>
         </ul>
     </div>
 </aside>
@@ -43,18 +43,69 @@
     <div class="container-fluid">
         <!--路径导航-->
         <ol class="breadcrumb">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Library</a></li>
-            <li class="active">Data</li>
+            <li><a href="#">管理系统</a></li>
+            <li class="active">用户管理</li>
         </ol>
-        <!--TODO 内容-->
+        <div class="ad_content">
+            <table class="table table-bordered table-hover">
+                <thead>
+                 <tr>
+                     <th width="10%">序号</th>
+                     <th width="30%">用户名</th>
+                     <th width="30%">手机号</th>
+                     <th width="20%">状态</th>
+                     <th>操作</th>
+                 </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+            <div class="page">
+                <ul class="pagination"></ul>
+            </div>
+        </div>
     </div>
 </section>
+<div class="modal fade" id="optionModal">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+                <h4 class="modal-title">温馨提示</h4>
+            </div>
+            <div class="modal-body">
+                <p class="text-danger"><span class="glyphicon glyphicon-info-sign"></span> 您确定要 <strong></strong> 这个用户吗？</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary">确定</button>
+            </div>
+        </div>
+    </div>
+</div>
+<script type="text/template" id="list">
+    <% for(var i = 0 ; i < rows.length ; i ++){ %>
+    <tr>
+        <td><%=(page-1)*size+i+1%></td>
+        <td><%=rows[i].username%></td>
+        <td><%=rows[i].mobile%></td>
+        <td><%=rows[i].isDelete==1?'正常':'已禁用'%></td>
+        <td>
+            <%if(rows[i].isDelete==1){%>
+            <a data-id="<%=rows[i].id%>" data-name="<%=rows[i].username%>" href="javascript:;" class="btn btn-sm btn-danger">禁用</a>
+            <%}else{%>
+            <a data-id="<%=rows[i].id%>" data-name="<%=rows[i].username%>" href="javascript:;" class="btn btn-sm btn-primary">启用</a>
+            <%}%>
+        </td>
+    </tr>
+    <% } %>
+</script>
 <script src="assets/jquery/jquery.min.js"></script>
 <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 <script src="assets/bootstrap-validator/js/bootstrapValidator.min.js"></script>
 <script src="assets/nprogress/nprogress.js"></script>
+<script src="assets/artTemplate/template-native.js"></script>
+<script src="assets/bootstrap-paginator/bootstrap-paginator.min.js"></script>
 <script src="js/admin.js"></script>
-<script src="js/index.js"></script>
+<script src="js/userManage.js"></script>
 </body>
 </html>
