--- a/public/m/searchList.html
+++ b/public/m/searchList.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=0"/>
-    <title>搜索中心</title>
+    <title>商品列表</title>
     <link type="image/x-icon" rel="shortcut icon" href="images/favicon.ico">
     <link rel="stylesheet" href="assets/mui/css/mui.css"/>
     <link rel="stylesheet" href="assets/fa/css/font-awesome.min.css"/>
